--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>TEST</title>
   </head>
-  <body style="padding: 0; margin: 0">
+  <body style="padding: 0; margin: 0; margin-bottom: 100px">
     <iframe id="quadplayFrame" style="position: fixed; width: 100%; height: 100%; border: none"></iframe>
     <script>
       document.getElementById('quadplayFrame').src = "https://morgan3d.github.io/quadplay/console/quadplay.html?game=" + location.href.replace('index.html', 'audiotest.game.json');
+
+      setTimeout(function () {
+          console.log('scrolled');
+          window.scrollTo(0, 1);
+      }, 1000);
     </script>
+
+    
   </body>
 </html>
