--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <body style="padding: 0; margin: 0; margin-bottom: 100px">
     <iframe id="quadplayFrame" style="position: fixed; width: 100%; height: 100%; border: none"></iframe>
     <script>
-      document.getElementById('quadplayFrame').src = "https://morgan3d.github.io/quadplay/console/quadplay.html?game=" + location.href.replace('index.html', 'audiotest.game.json');
+      document.getElementById('quadplayFrame').src = "https://morgan3d.github.io/quadplay/console/quadplay.html?game=quad://examples/animation");
 
       setTimeout(function () {
           console.log('scrolled');
-          window.scrollTo(0, 1);
+          window.scrollTo(0, 100);
       }, 1000);
     </script>
-
+    <div style="height:100px; width:100px; background: #F00"></div>
     
   </body>
 </html>
