--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           window.scrollTo(0, 100);
       }, 1000);
     </script>
-    <div style="height:100px; width:100px; background: #F00"></div>
+    <div style="height:100px; width:100px; background: #0F0"></div>
+    <div style="height:1000px; width:100px; background: #F00"></div>
     
   </body>
 </html>
