--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body style="padding: 0; margin: 0; margin-bottom: 100px">
     <iframe id="quadplayFrame" style="position: fixed; width: 100%; height: 100%; border: none"></iframe>
     <script>
-      document.getElementById('quadplayFrame').src = "https://morgan3d.github.io/quadplay/console/quadplay.html?game=quad://examples/animation");
+      document.getElementById('quadplayFrame').src = "https://morgan3d.github.io/quadplay/console/quadplay.html?game=quad://examples/animation";
 
       setTimeout(function () {
           console.log('scrolled');
